editando caminho do http

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,8 +8,8 @@
 Restaurante Chines Cansado
 <form >
 
-    <a href="http://localhost:8080/cliente">Ir para area do cliente</a> <br/>
-    <a href="http://localhost:8080/admin">Ir para area do admin</a>
+    <a href="https://prova1web.herokuapp.com/cliente">Ir para area do cliente</a> <br/>
+    <a href="https://prova1web.herokuapp.com/admin">Ir para area do admin</a>
 
 </form>
 </body>
